re PR inline-asm/8803 (Internal compiler error in instantiate_virtual_regs_1, at function.c:3974)

PR inline-asm/8803
	* function.c (instantate_virtual_regs):  Verify that all ASM statements
	match after the virutal regs instantiation.

From-SVN: r65438